# milkcrate

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  app.py  database.py  docker-compose.yml  install_nginx.sh  install_ubuntu.sh  justfile  mkdocs.yml  pyproject.toml  remove_nginx.sh  schema.sql  traefik.yml
.github/workflows/: README.md  docker.yml  docs.yml  tests.yml
_server/: milkcrate.conf  milkcrate.service
blueprints/: __init__.py  admin.py  auth.py  public.py  upload.py  volumes.py
docs/: index.md
docs/assets/css/: custom.css
docs/development/: architecture.md  blueprints.md  changelog.md  database.md  running.md  services.md
docs/getting-started/: getting-started.md  ubuntu-installation.md
docs/production/: backups.md  https-setup.md  multi-website-setup.md  security.md  traefik-advanced.md  traefik.md
docs/reference/: cli.md  configuration.md  nginx-reference.md
docs/support/: troubleshooting.md
docs/user-guide/: deployment.md  docker-compose-apps.md  dockerfile-apps.md  routing.md  volumes.md
milkcrate_core/: __init__.py  cli.py  config.py  errors.py  extensions.py
milkcrate_core/models/: user.py
sample_app/: .dockerignore  Dockerfile  README.md  app.py
sample_app/templates/: index.html
sample_compose_app/: Dockerfile  README.md  app.py  docker-compose.yml
sample_compose_app/templates/: index.html
services/: __init__.py  audit.py  backup.py  compose_parser.py  deploy.py  security.py  status_manager.py  validation.py  volume_manager.py
static/: admin.js  app.js  style.css
templates/: 404.html  500.html  admin_dashboard.html  base.html  index.html  login.html  upload.html
templates/admin/: status_badges_partial.html
templates/volumes/: create.html  list.html  view.html
tests/: conftest.py  test_admin.py  test_app_factory.py  test_auth.py  test_compose_parser.py  test_database.py  test_deploy_compose.py  test_public.py  test_security.py  test_static_and_templates.py  test_upload.py
